# wit_tut

./: .gitignore  Dockerfile  README.md  README_old.md  build.sh
add/: Cargo.toml
add/src/: bindings.rs  lib.rs
add/wit/: world.wit
app_host/: Cargo.toml
app_host/src/: main.rs
calculator/: Cargo.toml
calculator/src/: bindings.rs  lib.rs
calculator/wit/: world.wit
command/: Cargo.toml
command/src/: bindings.rs  main.rs
web/: Cargo.toml
web/src/: bindings.rs  lib.rs
web/wit/: world.wit
